--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(CUDA REQUIRED)
 
 #==================================== Inclusion of VTK ===========================#
 set(VTK_DIR $ENV{VTK_DIR})
+
 find_package(VTK REQUIRED)
 
 
@@ -36,23 +37,20 @@ file(GLOB LBM_HEADER_FILES "${INC_DIR}/lbm_module/*.hpp"
 file(GLOB LBM_SOURCE_FILES "${SRC_DIR}/lbm_module/*.cpp")
 file(GLOB LBM_KERNEL_FILES "${SRC_DIR}/lbm_module/*.cu")
 
-file(GLOB RENDERER_HEADER_FILES "${INC_DIR}/renderer_module/*.hpp" 
-								"${INC_DIR}/renderer_module/*.h")
-file(GLOB RENDERER_SOURCE_FILES "${SRC_DIR}/renderer_module/*.cpp")
+#list(FILTER UI_HEADER_FILES EXCLUDE REGEX "${INC_DIR}/ui_module/ui_*")
+#list(FILTER UI_SOURCE_FILES EXCLUDE REGEX "${SRC_DIR}/ui_module/mocs_*")
+#list(FILTER UI_SOURCE_FILES EXCLUDE REGEX "${SRC_DIR}/ui_module/autouic_*")
+#list(FILTER LBM_SOURCE_FILES EXCLUDE REGEX "${SRC_DIR}/ui_module/mocs_*")
 
 add_library(stream_ui STATIC ${UI_HEADER_FILES} ${UI_SOURCE_FILES} ${UI_GUI_FILES})
 add_library(stream_lbm STATIC ${LBM_HEADER_FILES} ${LBM_SOURCE_FILES} ${LBM_KERNEL_FILES})
-add_library(stream_renderer STATIC ${RENDERER_HEADER_FILES} ${RENDERER_SOURCE_FILES})
 
 target_include_directories(stream_ui 	PUBLIC "${INC_DIR}/ui_module")
 target_include_directories(stream_lbm 	PUBLIC "${INC_DIR}/lbm_module" 
 										PRIVATE ${CUDA_INCLUDE_DIRS})
-target_include_directories(stream_renderer 	PUBLIC "${INC_DIR}/renderer_module")
 
-target_link_libraries(stream_ui Qt6::Core Qt6::Widgets Qt6::OpenGL Qt6::Gui)	
-target_link_libraries(stream_lbm ${CUDA_LIBRARIES})												
-target_link_libraries(stream_renderer ${VTK_LIBRARIES})							
-
+target_link_libraries(stream_ui Qt6::Core Qt6::Widgets Qt6::OpenGL Qt6::Gui ${VTK_LIBRARIES})	
+target_link_libraries(stream_lbm ${CUDA_LIBRARIES})																	
 
 add_executable(StreamSimulator src/main.cpp)
 
